--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "lemmon/kirby-callouts",
     "description": "Kirby plugin that renders GitHub-style callouts",
-    "type": "kirby-plugin",
     "license": "MIT",
+    "type": "kirby-plugin",
     "authors": [
         {
             "name": "Jakub Pelák",
@@ -15,6 +15,15 @@
     },
     "require": {
         "getkirby/composer-installer": "^1.2"
+    },
+    "require-dev": {
+        "ergebnis/composer-normalize": "^2.48"
+    },
+    "config": {
+        "allow-plugins": {
+            "ergebnis/composer-normalize": true,
+            "getkirby/composer-installer": true
+        }
     },
     "extra": {
         "installer-name": "callouts"
